@@ -9,9 +9,9 @@ sysconf_DATA = joerc jmacsrc jstarrc rjoerc jpicorc
 man_MANS = joe.1
 noinst_HEADERS = b.h blocks.h bw.h cmd.h config.h hash.h help.h kbd.h \
 	macro.h main.h menu.h path.h poshist.h pw.h queue.h qw.h rc.h regex.h \
-	scrn.h tab.h termcap.h tty.h tw.h ublock.h uedit.h uerror.h ufile.h \
-	uformat.h uisrch.h umath.h undo.h usearch.h ushell.h utag.h utils.h \
-	va.h vfile.h vs.h w.h
+	scrn.h tab.h termcap.h tty.h tw.h types.h ublock.h uedit.h uerror.h \
+	ufile.h uformat.h uisrch.h umath.h undo.h usearch.h ushell.h utag.h \
+	utils.h va.h vfile.h vs.h w.h
 
 
 bin_PROGRAMS = joe termidx
